# las_palabras_bot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yaml
.sqlx/: query-1a8b4871f016d8d6ed3726317413744bf56cd951bf1e54d2f5ea691a49924e55.json  query-37941a16bc66d0155068fedaebe39d5570e85b26b3d3f1c6240c68944eb1d35c.json  query-71ec0d712a8f6561642a853481636a359e6359c433f39dab427cef3499e73557.json  query-7e5508cbdfbf916997973331a0a52ccfd0a98a775d1de809c8324f7e96dbd6a1.json  query-8b8be35d82cfb3b9bc19f49ec1ca823d5511d93518543d6acb4f221afe56e6fd.json  query-9a874c911d0887bd6dd59e8b3bb3fefd98582c2476561a16d97b7d64afc8e8b6.json  query-a410ce8c77f58115033aebda2516f3221436d84496023ecdb8b46ca362f0edf0.json  query-b72e2f2599899a76171e7d12f212dad26d62fe87004051a38789fd844032d67a.json  query-c08fc9589551908889b4ec1c543d924e29b68084ba9d4024de4acc450d8df7ed.json  query-c6444f586ddb86b0faa919700303c658f9c2b7584796782d83c047e0e666ddc1.json  query-e1033d8fc834a96be7005f16b4190c7b8089c6524402ac27a448082b52b6c650.json  query-f0571858fba380bc6baf322fc82aa1400166b62fb46cca3afb90131cd865a01d.json
config/: base.yaml  development.yaml
git-hooks/: pre-commit
migrations/: 20250706204713_word_table.sql  20250819213053_update_word_partofspeech_constraint.sql  20251007203944_create_verbs_table.sql  20251008200835_update_verb_table_with_correct_fields.sql
src/: application.rs  configuration.rs  lib.rs  main.rs  telemetry.rs
src/api/: info.rs  mod.rs  pagination.rs
src/api/verbs/: details.rs  list.rs  mod.rs  web_verb.rs
src/api/vocabulary/: create.rs  delete.rs  detail.rs  detail_word_error.rs  list.rs  mod.rs  update.rs
src/configuration/: app_enviroment.rs  application_settings.rs  database_settings.rs  mod.rs  settings.rs  telegram_settings.rs
src/domain/: mod.rs
src/domain/verbs/: light_verb.rs  mod.rs  raw_regular_conjucagion.rs  raw_regular_conjugacion.rs  raw_verb.rs  regular_conjugacion.rs  verb.rs
src/domain/verbs/repository/: db.rs  mod.rs  traits.rs
src/domain/vocabluary/: mod.rs  part_of_speech.rs  word.rs
src/domain/vocabluary/repository/: db.rs  mod.rs  traits.rs
src/domain/vocabulary/: part_of_speech.rs  raw_word.rs  word.rs
src/domain/vocabulary/repository/: db.rs  filters.rs  mod.rs  traits.rs
tests/api/: health.rs  helpers.rs  info.rs  main.rs
tests/api/verbs/: details.rs  list.rs  mod.rs
tests/api/vocabulary/: create.rs  delete.rs  detail.rs  list.rs  mod.rs  update.rs
