[package]
name = "las_palabras_bot"
description = "A Telegram bot for the Las Palabras game"
authors = ["Aleksadnr Aibulatov<zap.aibualtov@gmail.com>"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "las_palabras_bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
actix-web = "4.11.0"
config = "0.15.11"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }


[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["json", "rustls-tls"]
