[package]
name = "las_palabras_bot"
description = "A Telegram bot for the Las Palabras game"
authors = ["Aleksadnr Aibulatov<zap.aibualtov@gmail.com>"]
version = "0.1.0"
edition = "2024"
default-run = "las_palabras_bot"

[lib]
path = "src/lib.rs"

[[bin]]
name = "las_palabras_bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
actix-cors = "0.7.1"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
dotenv = "0.15.0"
envy = "0.4.2"
env_logger = "0.11.5"
log = "0.4.27"
secrecy = { "version" = "0.8.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = {  version = "0.1.41", features = ["log"] }
tracing-attributes = { version = "0.1.30" }
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7.18"
tracing-subscriber = {  version = "0.3.19", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
uuid = { version = "1.17.0", features = ["v4", "serde", "fast-rng"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
]


[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["json", "rustls-tls"]
